--- a/Math Race/Math Race/Math Race.vcxproj
+++ b/Math Race/Math Race/Math Race.vcxproj
@@ -128,7 +128,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main Game.c" />
-    <ClCompile Include="Player.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
