--- a/Math Race/Math Race/Math Race.vcxproj.filters
+++ b/Math Race/Math Race/Math Race.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="MainGame.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TimerTracker.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
