--- a/Math Race/Math Race/Math Race.vcxproj
+++ b/Math Race/Math Race/Math Race.vcxproj
@@ -132,7 +132,9 @@
   <ItemGroup>
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Rounds.h" />
+    <ClInclude Include="SaveLoadData.h" />
     <ClInclude Include="ScoreCalculator.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Visuals.h" />
