MenuScroll with input work

--- a/Math Race/Math Race/Math Race.vcxproj
+++ b/Math Race/Math Race/Math Race.vcxproj
@@ -130,7 +130,9 @@
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="KeyBinding.h" />
     <ClInclude Include="Manager.h" />
+    <ClInclude Include="MenuScroll.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Rounds.h" />
