--- a/Math Race/Math Race/Math Race.vcxproj
+++ b/Math Race/Math Race/Math Race.vcxproj
@@ -130,11 +130,11 @@
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="KeyBinding.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Manager.h" />
-    <ClInclude Include="MenuScroll.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerManager.h" />
+    <ClInclude Include="PrintMenu.h" />
     <ClInclude Include="qGeneratorAndChecker.h" />
     <ClInclude Include="Rounds.h" />
     <ClInclude Include="SaveLoadData.h" />
