Done Round Visuals

--- a/Math Race/Math Race/Math Race.vcxproj
+++ b/Math Race/Math Race/Math Race.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="PrintMenu.h" />
+    <ClInclude Include="PrintRounds.h" />
     <ClInclude Include="qGeneratorAndChecker.h" />
     <ClInclude Include="Rounds.h" />
     <ClInclude Include="SaveLoadData.h" />
